# sentiment-api

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yml
src/: main.rs
